# tari-crypto

./: .clog.toml  .deepsource.toml  .gitignore  .license.ignore  .versionrc.json  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  cbindgen.toml  changelog.md  deny.toml  key_sign.js  lints.toml  mobile_build.config.sample  mobile_build.sh  rust-toolchain.toml  rustfmt.toml  test_coverage.sh  wasm-demo.js  wasm.sh
.cargo/: config.toml
.circleci/: config.yml
.github/actions-rs/: grcov.yml
.github/workflows/: audit.yml  check_licence.yml  ci.yml  clippy-check.yml  grcov.yml  pr_signed_commits_check.yml  pr_title.yml  source-cov.yml  test.yml  wasm.yml
benches/: commitment.rs  mod.rs  range_proof.rs  signatures.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: keys.rs
libtari/: demo.c
scripts/: bump-version  cargo-version-updater.js
src/: commitment.rs  compressed_commitment.rs  compressed_key.rs  deterministic_randomizer.rs  dhke.rs  errors.rs  extended_range_proof.rs  guard.rs  hashing.rs  keys.rs  lib.rs  macros.rs  musig.rs  range_proof.rs  rewindable_range_proof.rs  signatures.rs  value_encryption.rs
src/ffi/: error.rs  keys.rs  mod.rs
src/hash/: blake2.rs  blake3.rs  error.rs  k12.rs  mod.rs  sha3.rs
src/ristretto/: bulletproofs_plus.rs  constants.rs  dalek_range_proof.rs  mod.rs  musig.rs  pedersen.rs  ristretto_com_and_pub_sig.rs  ristretto_com_sig.rs  ristretto_keys.rs  ristretto_sig.rs  script_commitment.rs  serialize.rs  test_common.rs  utils.rs
src/ristretto/pedersen/: commitment_factory.rs  extended_commitment_factory.rs  mod.rs
src/script/: error.rs  mod.rs  op_codes.rs  script_context.rs  serde.rs  stack.rs  tari_script.rs
src/signatures/: commitment_and_public_key_signature.rs  commitment_signature.rs  compressed_commitment_and_public_key_signature.rs  compressed_commitment_signature.rs  compressed_schnorr.rs  mod.rs  schnorr.rs
src/wasm/: commitments.rs  hashing.rs  key_utils.rs  keyring.rs  mod.rs  range_proofs.rs
supply-chain/: audits.toml  config.toml
wrappers/android/: CMakeLists.txt  TariCrypto.kt  jniCommon.cpp  jniTariCrypto.cpp
wrappers/ios/: c_bridging_header.h  tari_crypto.h  tari_crypto.swift
