[package]
name = "tari_crypto"
description = "Tari Cryptography library"
authors = ["The Tari Development Community"]
repository = "https://github.com/tari-project/tari"
categories = ["cryptography"]
homepage = "https://tari.com"
readme = "README.md"
license = "BSD-3-Clause"
version = "0.17.0"
edition = "2018"

[dependencies]
tari_utilities = { version = "0.5.1", features = ["zero", "std"] }
blake2 = { version = "0.10" }
borsh = { version = "0.10" , optional = true }
bulletproofs_plus = { package = "tari_bulletproofs_plus", version = "0.3.2" }
curve25519-dalek = { package = "tari-curve25519-dalek",  version = "4.0.3", default-features = false, features = ["serde", "alloc", "rand_core", "precomputed-tables"] }
digest = { version = "0.10" }
getrandom = { version = "0.2" }
lazy_static = { version = "1.3" }
log = { version = "0.4" }
once_cell = { version = "1.8" }
rand_chacha = { version = "0.3" }
rand_core = { version = "0.6" }
serde = { version = "1.0" }
serde-wasm-bindgen = { version = "0.4", optional = true }
sha3 = { version = "0.10" }
thiserror = { version = "1.0" }
wasm-bindgen = { version = "^0.2", features = ["serde-serialize"], optional = true }
zeroize = {version = "1" }
rand = { version = "0.8" }

[dev-dependencies]
bincode = { version = "1.1" }
criterion = { version = "0.5", default-features = false }
sha2 = { version = "0.10" }
wasm-bindgen-test = { version = "0.3" }

[build-dependencies]
cbindgen = {version = "0.24" }

[features]
wasm = ["wasm-bindgen", "getrandom/js", "serde-wasm-bindgen"]
ffi = []
musig = []

[lib]
# Disable benchmarks to allow Criterion to take over
bench = false
crate-type = ["lib", "cdylib", "staticlib"]

[[bench]]
name = "benches"
path = "benches/mod.rs"
harness = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]

[package.metadata.cargo-machete]
ignored = ["getrandom"]