[package]
name = "tari_crypto"
description = "Tari Cryptography library"
authors = ["The Tari Development Community"]
repository = "https://github.com/tari-project/tari"
categories = ["cryptography"]
homepage = "https://tari.com"
readme = "README.md"
license = "BSD-3-Clause"
version = "0.17.0"
edition = "2018"

[dependencies]
tari_utilities = { version = "0.5", default-features = false, features = ["zero"] }
blake2 = { version = "0.10", default-features = false  }
borsh = { version = "0.10" , optional = true , default-features = false}
bulletproofs_plus = { package = "tari_bulletproofs_plus", version = "0.3", optional = true }
curve25519-dalek = { package = "tari-curve25519-dalek",  version = "4.0.3", default-features = false, features = [ "alloc", "rand_core", "precomputed-tables", "zeroize"] }
digest = { version = "0.10", default-features = false }
log = { version = "0.4" , default-features = false}
once_cell = { version = "1.8", default-features = false, features = ["critical-section"] }
rand_chacha = { version = "0.3", default-features = false }
rand_core = { version = "0.6" , default-features = false}
serde = { version = "1.0", optional = true }
sha3 = { version = "0.10", default-features = false  }
snafu = { version = "0.7", default-features = false}
zeroize = {version = "1" , default-features = false}

[dev-dependencies]
tari_utilities = { version = "0.5", features = ["std"] }
serde = { version = "1.0"}
bincode = { version = "1.1" }
criterion = { version = "0.5", default-features = false }
sha2 = { version = "0.10" }
rand = { version = "0.8" }


[features]
default = ["bulletproofs_plus", "serde", "precomputed_tables", "borsh"]
precomputed_tables = []

[lib]
# Disable benchmarks to allow Criterion to take over
bench = false
crate-type = ["lib", "cdylib"]

[[bench]]
name = "benches"
path = "benches/mod.rs"
harness = false